<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:elevation="3dp"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/food_img"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/food_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/food_img"
            app:layout_constraintStart_toEndOf="@id/food_img"
            app:layout_constraintTop_toTopOf="@id/food_img" />

        <TextView
            android:id="@+id/food_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/food_img"
            tools:text="Delicious Food!" />

        <TextView
            android:id="@+id/food_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/food_name"
            app:layout_constraintTop_toBottomOf="@id/food_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_amount"
            app:layout_constraintBottom_toBottomOf="@id/food_amount"
            app:layout_constraintEnd_toStartOf="@id/food_amount"
            app:layout_constraintTop_toTopOf="@id/food_amount" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customer_number"
            app:layout_constraintBottom_toBottomOf="@id/customer_number"
            app:layout_constraintEnd_toStartOf="@id/customer_number"
            app:layout_constraintTop_toTopOf="@id/customer_number" />

        <EditText
            android:id="@+id/food_amount"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:autofillHints="0"
            android:hint="0"
            android:inputType="number"
            app:layout_constraintEnd_toStartOf="@id/change_button"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/customer_number"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:autofillHints="1"
            android:hint="1"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="@id/food_amount"
            app:layout_constraintTop_toBottomOf="@id/food_amount" />

        <Button
            android:id="@+id/change_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_order"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>